Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 6
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollinguUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: hello-webapp
        image: kaylan44/hello-webapp:latest
        ports:
        - containerPort: 80
        - containerPort: 8080
        - containerPort: 22
