Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
