Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gen
spec:
  rules:
    - host: web-nodeport.ilkilab.io
      http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: web-nodeport
              port:
                number: 80
